force-app/main/default/objects/Property_Valuation__c/fields/Land_Registry_Pending_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Land_Registry_Pending_Date_Time__c</fullName>
    <label>Land Registry Pending Date Time</label>
    <type>DateTime</type>
</CustomField>