force-app/main/default/objects/Property_Valuation__c/fields/Land_Registry_Primary_Owner_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Land_Registry_Primary_Owner_Salutation__c</fullName>
    <label>Land Registry Primary Owner Salutation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Salutation</valueSetName>
    </valueSet>
</CustomField>