force-app/main/default/objects/Property_Valuation__c/fields/Land_Registry_Secondary_Owner_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Land_Registry_Secondary_Owner_Last_Name__c</fullName>
    <label>Land Registry Secondary Owner Surname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>