force-app/main/default/objects/Property_Valuation__c/fields/Land_Registry_Secondary_Owner_Title__c.field-meta.xml
<CustomField>
    <fullName>Land_Registry_Secondary_Owner_Title__c</fullName>
    <label>Land Registry Secondary Owner Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>