force-app/main/default/objects/Property_Valuation__c/fields/Land_Registry_Verified__c.field-meta.xml
<CustomField>
    <fullName>Land_Registry_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Land Registry Verified</label>
    <type>Checkbox</type>
</CustomField>