force-app/main/default/objects/Property_Valuation__c/fields/Land_Registry_verified_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Land_Registry_verified_Date_Time__c</fullName>
    <label>Land Registry verified Date Time</label>
    <type>DateTime</type>
</CustomField>