force-app/main/default/objects/Property_Valuation__c/fields/Last_Service_Charge_Ground_Rent__c.field-meta.xml
<CustomField>
    <fullName>Last_Service_Charge_Ground_Rent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please supply a copy of your last service charge account
and ground rent demand.</inlineHelpText>
    <label>Last Service Charge &amp; Ground Rent</label>
    <type>Checkbox</type>
</CustomField>