force-app/main/default/objects/Property_Valuation__c/fields/Lease_Document__c.field-meta.xml
<CustomField>
    <fullName>Lease_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please supply a copy of your lease.</inlineHelpText>
    <label>Lease Document</label>
    <type>Checkbox</type>
</CustomField>