force-app/main/default/objects/Property_Valuation__c/fields/Lease_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Lease_Frequency__c</fullName>
    <label>Lease Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lease_Frequency</valueSetName>
    </valueSet>
</CustomField>