force-app/main/default/objects/Property_Valuation__c/fields/Lease_Type__c.field-meta.xml
<CustomField>
    <fullName>Lease_Type__c</fullName>
    <label>Lease Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Short-Let</fullName>
            </value>
            <value>
                <fullName>Long-Let</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>