force-app/main/default/objects/Property_Valuation__c/fields/Leisure_Entertainment_facilities__c.field-meta.xml
<CustomField>
    <fullName>Leisure_Entertainment_facilities__c</fullName>
    <label>Leisure / Entertainment facilities</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>