force-app/main/default/objects/Property_Valuation__c/fields/Letting_Fee__c.field-meta.xml
<CustomField>
    <fullName>Letting_Fee__c</fullName>
    <label>Letting Fee (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>