force-app/main/default/objects/Property_Valuation__c/fields/Letting_Fee_Colloection__c.field-meta.xml
<CustomField>
    <fullName>Letting_Fee_Colloection__c</fullName>
    <label>Letting Fee Colloection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Letting_Fee_Colloection</valueSetName>
    </valueSet>
</CustomField>