force-app/main/default/objects/Property_Valuation__c/fields/Letting_Service__c.field-meta.xml
<CustomField>
    <fullName>Letting_Service__c</fullName>
    <label>Letting Service</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Letting_Service</valueSetName>
    </valueSet>
</CustomField>