force-app/main/default/objects/Property_Valuation__c/fields/Lettings_and_Full_Management__c.field-meta.xml
<CustomField>
    <fullName>Lettings_and_Full_Management__c</fullName>
    <formula>If(INCLUDES(Letting_Service__c ,&quot;Lettings and Full Management&quot;),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lettings and Full Management</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>