force-app/main/default/objects/Property_Valuation__c/fields/Lettings_and_Rent_Collection__c.field-meta.xml
<CustomField>
    <fullName>Lettings_and_Rent_Collection__c</fullName>
    <formula>If(INCLUDES(Letting_Service__c ,&quot;Lettings and Rent Collection&quot;),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lettings and Rent Collection</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>