force-app/main/default/objects/Property_Valuation__c/fields/Lid_Responsible_for_Check_Out__c.field-meta.xml
<CustomField>
    <fullName>Lid_Responsible_for_Check_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lid Responsible for Check Out</label>
    <type>Checkbox</type>
</CustomField>