force-app/main/default/objects/Property_Valuation__c/fields/Lift__c.field-meta.xml
<CustomField>
    <fullName>Lift__c</fullName>
    <label>Lift</label>
    <length>30</length>
    <type>Text</type>
</CustomField>