force-app/main/default/objects/Property_Valuation__c/fields/Listing_Category__c.field-meta.xml
<CustomField>
    <fullName>Listing_Category__c</fullName>
    <inlineHelpText>Primary means New Home and
Secondary means Second hand</inlineHelpText>
    <label>Listing Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>