force-app/main/default/objects/Property_Valuation__c/fields/Listing_count__c.field-meta.xml
<CustomField>
    <fullName>Listing_count__c</fullName>
    <label>Listing count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>