force-app/main/default/objects/Property_Valuation__c/fields/Listing_Price__c.field-meta.xml
<CustomField>
    <fullName>Listing_Price__c</fullName>
    <inlineHelpText>Asking Price for sale should be 2 millions pounds.
Asking Price for rent should be minimum 1500 pounds</inlineHelpText>
    <label>Asking Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>