force-app/main/default/objects/Property_Valuation__c/fields/Live_Work_Unit__c.field-meta.xml
<CustomField>
    <fullName>Live_Work_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Live/Work Unit</label>
    <type>Checkbox</type>
</CustomField>