force-app/main/default/objects/Property_Valuation__c/fields/Living_Area_Description__c.field-meta.xml
<CustomField>
    <fullName>Living_Area_Description__c</fullName>
    <label>Living Area Description</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>