force-app/main/default/objects/Property_Valuation__c/fields/Local_authority__c.field-meta.xml
<CustomField>
    <fullName>Local_authority__c</fullName>
    <label>Local authority</label>
    <length>200</length>
    <type>Text</type>
</CustomField>