force-app/main/default/objects/Property_Valuation__c/fields/Lot_Size__c.field-meta.xml
<CustomField>
    <fullName>Lot_Size__c</fullName>
    <inlineHelpText>Add size of the Lot</inlineHelpText>
    <label>Lot Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>