force-app/main/default/objects/Property_Valuation__c/fields/MA_Scheduled_Age__c.field-meta.xml
<CustomField>
    <fullName>MA_Scheduled_Age__c</fullName>
    <formula>ABS(ROUND((DATETIMEVALUE(MA_Scheduled_Date_Time__c) - DATETIMEVALUE(In_Progress_Date_Time__c)) / (1), 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MA Scheduled Age (In Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>