force-app/main/default/objects/Property_Valuation__c/fields/MA_Scheduled_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>MA_Scheduled_Date_Time__c</fullName>
    <label>MA Scheduled Date And Time</label>
    <type>DateTime</type>
</CustomField>