force-app/main/default/objects/Property_Valuation__c/fields/Maintenance_Only__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Only__c</fullName>
    <formula>If(INCLUDES(Letting_Service__c ,&quot;Maintenance Only&quot;),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maintenance Only</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>