force-app/main/default/objects/Property_Valuation__c/fields/Management_Fee__c.field-meta.xml
<CustomField>
    <fullName>Management_Fee__c</fullName>
    <label>Management Fee (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>