force-app/main/default/objects/Property_Valuation__c/fields/Management_Fee_Collection__c.field-meta.xml
<CustomField>
    <fullName>Management_Fee_Collection__c</fullName>
    <label>Management Fee Collection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Management_Fee_Collection</valueSetName>
    </valueSet>
</CustomField>