force-app/main/default/objects/Property_Valuation__c/fields/Managing_Agent_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>Managing_Agent_if_applicable__c</fullName>
    <label>Managing Agent (if applicable)</label>
    <length>250</length>
    <type>Text</type>
</CustomField>