force-app/main/default/objects/Property_Valuation__c/fields/Market_Appraisal_Price__c.field-meta.xml
<CustomField>
    <fullName>Market_Appraisal_Price__c</fullName>
    <label>Market Appraisal Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>