force-app/main/default/objects/Property_Valuation__c/fields/Marketing_Exposure__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Exposure__c</fullName>
    <label>Marketing Exposure</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Marketing_Exposure</valueSetName>
    </valueSet>
</CustomField>