force-app/main/default/objects/Property_Valuation__c/fields/Name_of_seller__c.field-meta.xml
<CustomField>
    <fullName>Name_of_seller__c</fullName>
    <label>Name of seller</label>
    <length>30</length>
    <type>Text</type>
</CustomField>