force-app/main/default/objects/Property_Valuation__c/fields/Not_Instructed__c.field-meta.xml
<CustomField>
    <fullName>Not_Instructed__c</fullName>
    <label>Not Instructing Date Time</label>
    <type>DateTime</type>
</CustomField>