force-app/main/default/objects/Property_Valuation__c/fields/Not_Instructing_Age__c.field-meta.xml
<CustomField>
    <fullName>Not_Instructing_Age__c</fullName>
    <formula>ABS(ROUND((DATETIMEVALUE(Not_Instructed__c) - DATETIMEVALUE(Instructing_Date_Time__c )) / (1), 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Not Instructing Age (In Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>