force-app/main/default/objects/Property_Valuation__c/fields/Notable_brands_in_the_property__c.field-meta.xml
<CustomField>
    <fullName>Notable_brands_in_the_property__c</fullName>
    <label>Notable brands in the property</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>