force-app/main/default/objects/Property_Valuation__c/fields/Ongoing_Property_Proposals_or_Disputes__c.field-meta.xml
<CustomField>
    <fullName>Ongoing_Property_Proposals_or_Disputes__c</fullName>
    <inlineHelpText>Do you have any knowledge of ongoing proposals or disputes involving this
property with individuals or public entities? If so, kindly provide
comprehensive details.</inlineHelpText>
    <label>Ongoing Property Proposals or Disputes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>