force-app/main/default/objects/Property_Valuation__c/fields/Ongoing_Rent_Amount__c.field-meta.xml
<CustomField>
    <fullName>Ongoing_Rent_Amount__c</fullName>
    <label>Ongoing Rent Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>