force-app/main/default/objects/Property_Valuation__c/fields/Other_Charges_Garden_Fees_Private_Road__c.field-meta.xml
<CustomField>
    <fullName>Other_Charges_Garden_Fees_Private_Road__c</fullName>
    <inlineHelpText>Are there any other charges eg: garden fees, private road charges?</inlineHelpText>
    <label>Other Charges Garden Fees, Private Road</label>
    <length>100</length>
    <type>Text</type>
</CustomField>