force-app/main/default/objects/Property_Valuation__c/fields/Other_Owner_Details__c.field-meta.xml
<CustomField>
    <fullName>Other_Owner_Details__c</fullName>
    <inlineHelpText>Please enter Email , Mobile , Name for each Owner</inlineHelpText>
    <label>Other Owner Details</label>
    <type>TextArea</type>
</CustomField>