force-app/main/default/objects/Property_Valuation__c/fields/Our_Fee_If_Joint_Agents_Sell__c.field-meta.xml
<CustomField>
    <fullName>Our_Fee_If_Joint_Agents_Sell__c</fullName>
    <inlineHelpText>Add amount between the agents and the property owner.</inlineHelpText>
    <label>Our Fee If Joint Agents Sell</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>