force-app/main/default/objects/Property_Valuation__c/fields/Outdoor_Space_Details_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Outdoor_Space_Details_Restrictions__c</fullName>
    <inlineHelpText>Outside space;-

Regarding the property, kindly provide details about any permissions granted
for utilizing outdoor spaces such as the garden, terrace, patio, balcony, roof
terrace, communal gardens, or any other relevant areas. Additionally, please
confirm that there are no restrictive agreements that hinder the peaceful
enjoyment of these spaces and verify that they are included as part of the
property you are leasing or selling.</inlineHelpText>
    <label>Outdoor Space Details And Restrictions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>