force-app/main/default/objects/Property_Valuation__c/fields/Overseas_Address__c.field-meta.xml
<CustomField>
    <fullName>Overseas_Address__c</fullName>
    <label>Overseas Address</label>
    <length>18</length>
    <type>Text</type>
</CustomField>