force-app/main/default/objects/Property_Valuation__c/fields/PandaDoc_Asking_Price__c.field-meta.xml
<CustomField>
    <fullName>PandaDoc_Asking_Price__c</fullName>
    <formula>Listing_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PandaDoc Asking Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>