force-app/main/default/objects/Property_Valuation__c/fields/PandaDoc_Document__c.field-meta.xml
<CustomField>
    <fullName>PandaDoc_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PandaDoc Document</label>
    <referenceTo>pandadoc__PandaDocDocument__c</referenceTo>
    <relationshipLabel>Property Valuations</relationshipLabel>
    <relationshipName>Property_Valuations</relationshipName>
    <type>Lookup</type>
</CustomField>