force-app/main/default/objects/Property_Valuation__c/fields/PandaDoc_Document_Name__c.field-meta.xml
<CustomField>
    <fullName>PandaDoc_Document_Name__c</fullName>
    <formula>PandaDoc_Document__r.pandadoc__Template_Name__c</formula>
    <label>PandaDoc Document Name</label>
    <type>Text</type>
</CustomField>