force-app/main/default/objects/Property_Valuation__c/fields/PandadocAdvertising_Fee__c.field-meta.xml
<CustomField>
    <fullName>PandadocAdvertising_Fee__c</fullName>
    <label>Advertising Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>