force-app/main/default/objects/Property_Valuation__c/fields/PandadocBrochures_Fee__c.field-meta.xml
<CustomField>
    <fullName>PandadocBrochures_Fee__c</fullName>
    <label>Brochures Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>