force-app/main/default/objects/Property_Valuation__c/fields/PandadocEPC_Fee__c.field-meta.xml
<CustomField>
    <fullName>PandadocEPC_Fee__c</fullName>
    <label>EPC Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>