force-app/main/default/objects/Property_Valuation__c/fields/PandadocPhotography_Fee__c.field-meta.xml
<CustomField>
    <fullName>PandadocPhotography_Fee__c</fullName>
    <label>Photography Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>