force-app/main/default/objects/Property_Valuation__c/fields/PandadocTotal_Due__c.field-meta.xml
<CustomField>
    <fullName>PandadocTotal_Due__c</fullName>
    <formula>PandadocBrochures_Fee__c + PandadocEPC_Fee__c + PandadocPhotography_Fee__c + PandadocAdvertising_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>