force-app/main/default/objects/Property_Valuation__c/fields/Parking__c.field-meta.xml
<CustomField>
    <fullName>Parking__c</fullName>
    <label>Parking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Parking</valueSetName>
    </valueSet>
</CustomField>