force-app/main/default/objects/Property_Valuation__c/fields/Parking_Space_Number__c.field-meta.xml
<CustomField>
    <fullName>Parking_Space_Number__c</fullName>
    <inlineHelpText>If parking is included in the property, please provide the parking space number:</inlineHelpText>
    <label>Parking Space Number</label>
    <length>250</length>
    <type>Text</type>
</CustomField>