force-app/main/default/objects/Property_Valuation__c/fields/Personal_Interest_Disclosure_Foxtons__c.field-meta.xml
<CustomField>
    <fullName>Personal_Interest_Disclosure_Foxtons__c</fullName>
    <inlineHelpText>Declaration of interest :- 

We are required to disclose any personal interest, as defi ned by Section 21 of
the Estate Agents Act 1979, to any prospective buyer. Are you aware of any
relationship you, your spouse/partner, immediate family, or business associates
have with Foxtons? If yes, please give details.</inlineHelpText>
    <label>Personal Interest Disclosure</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>