force-app/main/default/objects/Property_Valuation__c/fields/Please_supply_a_copy_of_your_lease__c.field-meta.xml
<CustomField>
    <fullName>Please_supply_a_copy_of_your_lease__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Please supply a copy of your lease</label>
    <type>Checkbox</type>
</CustomField>