force-app/main/default/objects/Property_Valuation__c/fields/Pls_supply_copy_of_last_service_charge__c.field-meta.xml
<CustomField>
    <fullName>Pls_supply_copy_of_last_service_charge__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please supply a copy of your last service charge account
and ground rent demand</inlineHelpText>
    <label>Pls supply copy of last service charge?</label>
    <type>Checkbox</type>
</CustomField>