force-app/main/default/objects/Property_Valuation__c/fields/Porter_Contact__c.field-meta.xml
<CustomField>
    <fullName>Porter_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Porter Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Property Valuations (Porter Contact)</relationshipLabel>
    <relationshipName>Property_Valuations2</relationshipName>
    <type>Lookup</type>
</CustomField>