force-app/main/default/objects/Property_Valuation__c/fields/Previous_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Previous_Agent_Name__c</fullName>
    <label>Previous Agent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>