force-app/main/default/objects/Property_Valuation__c/fields/Previous_Date_Instructed__c.field-meta.xml
<CustomField>
    <fullName>Previous_Date_Instructed__c</fullName>
    <inlineHelpText>Please add most recent date on which an instruction assigned</inlineHelpText>
    <label>Previous Date Instructed</label>
    <type>Date</type>
</CustomField>