force-app/main/default/objects/Property_Valuation__c/fields/Previous_Listing_Price__c.field-meta.xml
<CustomField>
    <fullName>Previous_Listing_Price__c</fullName>
    <inlineHelpText>Please add the most recent Listing Price.</inlineHelpText>
    <label>Previous Listing Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>