force-app/main/default/objects/Property_Valuation__c/fields/Private_Amenities__c.field-meta.xml
<CustomField>
    <fullName>Private_Amenities__c</fullName>
    <label>Private Amenities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Private_Amenities</valueSetName>
    </valueSet>
</CustomField>