force-app/main/default/objects/Property_Valuation__c/fields/Property_Access_Rights__c.field-meta.xml
<CustomField>
    <fullName>Property_Access_Rights__c</fullName>
    <inlineHelpText>Are there any rights of way enjoyed by or affecting this property?</inlineHelpText>
    <label>Property Access Rights</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>