force-app/main/default/objects/Property_Valuation__c/fields/Property_address__c.field-meta.xml
<CustomField>
    <fullName>Property_address__c</fullName>
    <label>Property address</label>
    <type>TextArea</type>
</CustomField>