force-app/main/default/objects/Property_Valuation__c/fields/Property_Orientation__c.field-meta.xml
<CustomField>
    <fullName>Property_Orientation__c</fullName>
    <label>Property Orientation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Row</fullName>
            </value>
            <value>
                <fullName>Corner Unit</fullName>
            </value>
            <value>
                <fullName>Low Floor</fullName>
            </value>
            <value>
                <fullName>High Floor</fullName>
            </value>
            <value>
                <fullName>Independent</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>