force-app/main/default/objects/Property_Valuation__c/fields/Property_outdoor_space__c.field-meta.xml
<CustomField>
    <fullName>Property_outdoor_space__c</fullName>
    <label>Property outdoor space</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>