force-app/main/default/objects/Property_Valuation__c/fields/Property_Owner_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Property_Owner_Salutation__c</fullName>
    <formula>TEXT(Contact__r.Salutation )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Owner Salutation</label>
    <type>Text</type>
</CustomField>