force-app/main/default/objects/Property_Valuation__c/fields/Property_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Property_Ownership__c</fullName>
    <label>Property Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Property_Ownership</valueSetName>
    </valueSet>
</CustomField>