force-app/main/default/objects/Property_Valuation__c/fields/Property_Parking_and_Planning_Consent__c.field-meta.xml
<CustomField>
    <fullName>Property_Parking_and_Planning_Consent__c</fullName>
    <inlineHelpText>Parking:- 

Is there any provision for off-street parking, a garage, hard standing, or similar
amenities associated with the property, and if so, has it received planning
consent? Additionally, confirm if there are any restrictions or covenants that
apply to these facilities.</inlineHelpText>
    <label>Property Parking and Planning Consent</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>