force-app/main/default/objects/Property_Valuation__c/fields/Property_Restrictive_Covenants__c.field-meta.xml
<CustomField>
    <fullName>Property_Restrictive_Covenants__c</fullName>
    <inlineHelpText>Are you aware of any unusual restrictive covenants relating to the property (eg.
relating to the alternative use of the premises, restrictions on letting, or the need
for all hard surfaced fl oors to be carpeted etc)?
If yes, please give full details.</inlineHelpText>
    <label>Property Restrictive Covenants</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>