force-app/main/default/objects/Property_Valuation__c/fields/Property_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Sub_Type__c</fullName>
    <label>Property Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Property_Sub_Type_Values</valueSetName>
    </valueSet>
</CustomField>