force-app/main/default/objects/Property_Valuation__c/fields/Property_Valuation_AML_Count__c.field-meta.xml
<CustomField>
    <fullName>Property_Valuation_AML_Count__c</fullName>
    <label>Property Valuation AML Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>