force-app/main/default/objects/Property_Valuation__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason for not Instructing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Reason</valueSetName>
    </valueSet>
</CustomField>